[gd_scene load_steps=8 format=2]

[ext_resource path="res://MAIN/sprites/guns/guns1.png" type="Texture" id=1]
[ext_resource path="res://MAIN/AimLine.tscn" type="PackedScene" id=2]
[ext_resource path="res://MAIN/ReloadButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://MAIN/sprites/sounds/GUN_FIRE-GoodSoundForYou-820112263.wav" type="AudioStream" id=4]
[ext_resource path="res://MAIN/Gun3.gd" type="Script" id=5]
[ext_resource path="res://MAIN/sprites/sounds/shotgun-reload-old_school-RA_The_Sun_God-580332022.wav" type="AudioStream" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 33.0289

[node name="Gun3" type="RigidBody2D" groups=[
"secondary",
]]
collision_layer = 131072
can_sleep = false
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.321413, 0.228861 )
texture = ExtResource( 1 )

[node name="BulletPoint" type="Node2D" parent="."]
position = Vector2( 112.828, -13.4701 )

[node name="ReloadButton" parent="." instance=ExtResource( 3 )]

[node name="Sprite" parent="ReloadButton/Node2D" index="1"]
position = Vector2( 26.1775, -4.3786 )
scale = Vector2( 0.163528, 0.12283 )
texture = ExtResource( 1 )

[node name="AimLine" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, -13 )

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -72.3787, -31.4574, 72.9801, -35.386, 75.2251, 12.3186, -26.3577, 10.6349, -24.674, 43.1863, -80.7971, 35.3291 )

[node name="Detector" type="Area2D" parent="." groups=[
"pickableGun",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector"]
shape = SubResource( 1 )

[node name="catridge_point" type="Node2D" parent="."]
position = Vector2( -40.9698, -23.5717 )

[node name="reload_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="gunshot" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -20.0
[connection signal="pressed" from="ReloadButton/Node2D/reload" to="." method="_on_reload_pressed"]

[editable path="ReloadButton"]
